Adicionando pesquisa de todos os produtos